deployment/k8s/local/vcount/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vcounter
  namespace: vcounter
spec:
  selector:
    app: vcounter
  ports:
  - port: 80
    targetPort: 80
