deployment/k8s/local/vcount/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vcounter
  namespace: vcounter
spec:
  rules:
    - host: vcounter.k8s.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vcounter
                port:
                  number: 80
